enhance layout and styles: add navigation, update header, and improve main content design

--- a/books-on-hand/src/about.html
+++ b/books-on-hand/src/about.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <header>
-        <h1>About Books On Hand</h1>
+        <h1>Books On Hand</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="books.html">Books</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
