--- a/books-on-hand/src/index.html
+++ b/books-on-hand/src/index.html
@@ -22,6 +22,11 @@
         <section class="banner">
             <h2>Welcome to Books On Hand</h2>
             <p>Your one-stop shop for all your book needs!</p>
+            <button class="cta-button">Shop Now</button>
+        </section>
+        <section class="search-bar">
+            <input type="text" placeholder="Search for books...">
+            <button>Search</button>
         </section>
         <section class="featured">
             <h3>New Arrivals</h3>
@@ -40,6 +45,10 @@
             <div class="category-list">
                 <!-- Categories will be dynamically inserted here -->
             </div>
+        </section>
+        <section class="cta-buttons">
+            <button class="cta-button">Buy Books</button>
+            <button class="cta-button">Sell Books</button>
         </section>
     </main>
     <footer>
