add book listings and styles: implement static book items and enhance layout for categories and search functionality

--- a/books-on-hand/src/index.html
+++ b/books-on-hand/src/index.html
@@ -31,19 +31,67 @@
         <section class="featured">
             <h3>New Arrivals</h3>
             <div class="book-list">
-                <!-- New arrivals will be dynamically inserted here -->
+                <div class="book-item">
+                    <img src="images/book.png" alt="Book 1">
+                    <h4>Book Title 1</h4>
+                    <p>Author 1</p>
+                    <p>$10.00</p>
+                </div>
+                <div class="book-item">
+                    <img src="images/book.png" alt="Book 2">
+                    <h4>Book Title 2</h4>
+                    <p>Author 2</p>
+                    <p>$12.00</p>
+                </div>
+                <div class="book-item">
+                    <img src="images/book.png" alt="Book 3">
+                    <h4>Book Title 3</h4>
+                    <p>Author 3</p>
+                    <p>$15.00</p>
+                </div>
             </div>
         </section>
         <section class="featured">
             <h3>Best Sellers</h3>
             <div class="book-list">
-                <!-- Best sellers will be dynamically inserted here -->
+                <div class="book-item">
+                    <img src="images/book.png" alt="Book 4">
+                    <h4>Book Title 4</h4>
+                    <p>Author 4</p>
+                    <p>$20.00</p>
+                </div>
+                <div class="book-item">
+                    <img src="images/book.png" alt="Book 5">
+                    <h4>Book Title 5</h4>
+                    <p>Author 5</p>
+                    <p>$18.00</p>
+                </div>
+                <div class="book-item">
+                    <img src="images/book.png" alt="Book 6">
+                    <h4>Book Title 6</h4>
+                    <p>Author 6</p>
+                    <p>$22.00</p>
+                </div>
             </div>
         </section>
         <section class="categories">
             <h3>Categories Preview</h3>
             <div class="category-list">
-                <!-- Categories will be dynamically inserted here -->
+                <div class="category-item">
+                    <h4>Fiction</h4>
+                </div>
+                <div class="category-item">
+                    <h4>Non-Fiction</h4>
+                </div>
+                <div class="category-item">
+                    <h4>Children's Books</h4>
+                </div>
+                <div class="category-item">
+                    <h4>Mystery</h4>
+                </div>
+                <div class="category-item">
+                    <h4>Academic</h4>
+                </div>
             </div>
         </section>
         <section class="cta-buttons">
