--- a/books-on-hand/src/books.html
+++ b/books-on-hand/src/books.html
@@ -34,8 +34,67 @@
             <button id="filter-btn">Filter</button>
         </div>
         
-        <section id="book-list">
-            <!-- Book items will be dynamically inserted here -->
+        <section id="book-list" class="book-list">
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 1">
+                <h4>Book Title 1</h4>
+                <p>Author 1</p>
+                <p>$10.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 2">
+                <h4>Book Title 2</h4>
+                <p>Author 2</p>
+                <p>$12.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 3">
+                <h4>Book Title 3</h4>
+                <p>Author 3</p>
+                <p>$15.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 4">
+                <h4>Book Title 4</h4>
+                <p>Author 4</p>
+                <p>$20.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 5">
+                <h4>Book Title 5</h4>
+                <p>Author 5</p>
+                <p>$18.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 6">
+                <h4>Book Title 6</h4>
+                <p>Author 6</p>
+                <p>$22.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 7">
+                <h4>Book Title 7</h4>
+                <p>Author 7</p>
+                <p>$25.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 8">
+                <h4>Book Title 8</h4>
+                <p>Author 8</p>
+                <p>$30.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 9">
+                <h4>Book Title 9</h4>
+                <p>Author 9</p>
+                <p>$35.00</p>
+            </div>
+            <div class="book-item">
+                <img src="images/book.png" alt="Book 10">
+                <h4>Book Title 10</h4>
+                <p>Author 10</p>
+                <p>$40.00</p>
+            </div>
         </section>
     </main>
     
